Fix code smell: replace collect(Collectors.toList()) with toList()